# LawOfLargeNumbersLab

./: README.md  pyproject.toml
lln_lab/: app.py
lln_lab/distributions/: distributions.py  distributions_definitions.py
